--- a/applications.html
+++ b/applications.html
@@ -34,12 +34,14 @@
           <tr>
             <td class="container" >
               <p><b>Feb. 20, 2016</b> is my couple's wedding day. <br>
-              you can watch <b><a target="_blank" href="https://blog.naver.com/red88chs/220589865296">the video (<-- Click here) </a></b> tells our story </p><br/><br/>
+              you can watch the video tells our story </p><br/><br/>
               </td>
             </tr>
           </table>
         </div>
 
+        <iframe width="544" height="306" src="https://serviceapi.nmv.naver.com/flash/convertIframeTag.nhn?vid=590649421A2B7137464133A14280BD357DB7&outKey=V12108f2cfdbc3b34e50320c5ace2ec7cccfdf9a76343f4953dea20c5ace2ec7cccfd" frameborder="no" scrolling="no" title="NaverVideo" allow="autoplay; gyroscope; accelerometer; encrypted-media" allowfullscreen></iframe>
+        <br/><br/><br/><br/>
         <div align="center" class="module_table">
          <table cellpadding="0" cellspacing="0" >
           <tr><td class="module_top"><img src="love.jpg" alt=""></td></tr>
